objects/Mkt_Taxonomy_relations__c.object
<CustomObject>
    <description>Created as a part of DPS-18900</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Created as a part of DPS - 18900</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18900</description>
        <label>Language Id</label>
        <referenceTo>Mkt_Language_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Relations</relationshipLabel>
        <relationshipName>Taxonomy_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_From_Master_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Taxonomy From Master Id</label>
        <referenceTo>Mkt_Taxonomy_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Relations</relationshipLabel>
        <relationshipName>Taxonomy_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Txnmy_Relation_ID__c</fullName>
        <description>Created as a part of DPS - 18900</description>
        <externalId>true</externalId>
        <label>Taxonomy Relation ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Txnmy_Relation_Status__c</fullName>
        <description>Created as a part of DPS - 18900</description>
        <label>Taxonomy Relation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0 - Active</fullName>
                </value>
                <value>
                    <fullName>1 - Inactive (Paused)</fullName>
                </value>
                <value>
                    <fullName>2 - Inactive (Removed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Txnmy_Relation_Type__c</fullName>
        <description>Created as a part of DPS - 18900</description>
        <label>Taxonomy Relation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Txnmy_To_Master_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of DPS - 18900</description>
        <label>Taxonomy To Master Id</label>
        <referenceTo>Mkt_Taxonomy_Master__c</referenceTo>
        <relationshipLabel>Taxonomy Relations (Taxonomy To Master Id)</relationshipLabel>
        <relationshipName>Taxonomy_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Taxonomy Relations</label>
    <nameField>
        <label>Taxonomy Relations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxonomy Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>